Prevent horizontal scroll on overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-  overflow-x: hidden; /* Prevents horizontal scrollbar from appearing */
-}
-
 @font-face {
     font-family: FARRAY;
     src: url(./fonts/FARRAY.otf);
@@ -19,6 +15,10 @@ body {
   background-color: #EEEEEE;
   font-family: "FARRAY";
   margin-top: 0%;
+}
+
+#contain {
+    overflow-x: hidden; /* Prevents horizontal scrollbar from appearing */
 }
 /*
 section {
